--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/home/xiaojkql/.pyenv/versions/3.7.1/bin/python"
+    "python.pythonPath": "D:\\Software\\Anaconda\\envs\\python3\\python.exe"
 }
