--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "D:\\Software\\Anaconda\\envs\\python3\\python.exe"
+    "python.pythonPath": "/home/xiaojkql/.pyenv/versions/3.7.1/bin/python",
+    "python.linting.flake8Enabled": false,
+    "python.linting.pep8Enabled": true,
+    "python.linting.enabled": true
 }
