--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/home/xiaojkql/.pyenv/versions/3.7.1/bin/python",
+    "python.pythonPath": "/home/qinyuan/.pyenv/versions/3.7.3/bin/python",
     "python.linting.flake8Enabled": false,
     "python.linting.pep8Enabled": true,
     "python.linting.enabled": true
